05-route.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.lizzo.id

  route = [
    {
      cidr_block                 = "0.0.0.0/0"
      nat_gateway_id             = aws_nat_gateway.ngw.id
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.lizzo.id

  route = [ 
    {
      cidr_block                 = "0.0.0.0/0"
      gateway_id                 = aws_internet_gateway.igw.id
      nat_gateway_id             = ""
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "public"
  }
}

resource "aws_route_table_association" "privatelizzo_subnet1a" {
  subnet_id      = aws_subnet.privatelizzo_subnet1a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "privatelizzo_subnet1b" {
  subnet_id      = aws_subnet.privatelizzo_subnet1b.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "privatelizzo_subnet1c" {
  subnet_id      = aws_subnet.privatelizzo_subnet1c.id
  route_table_id = aws_route_table.private.id
}


#public

resource "aws_route_table_association" "lizzo_subnet1a" {
  subnet_id      = aws_subnet.lizzo_subnet1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "lizzo_subnet1b" {
  subnet_id      = aws_subnet.lizzo_subnet1b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "lizzo_subnet1c" {
  subnet_id      = aws_subnet.lizzo_subnet1c.id
  route_table_id = aws_route_table.public.id
}
